--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -105,24 +105,6 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <minimizeJar>true</minimizeJar>
-                            <artifactSet>
-                                <includes>
-                                    <!-- libs that are not provided by flink binary -->
-                                    <include>org.apache.hbase:hbase-common</include>
-                                    <include>org.apache.flink:flink-gelly_2.11</include>
-                                    <include>org.gradoop:*</include>
-                                    <include>com.github.s1ck:gdl</include>
-                                    <include>org.codehaus.jettison:jettison</include>
-                                    <include>com.google.guava:guava</include>
-                                    <include>org.antlr:antlr4-runtime</include>
-                                    <include>org.mongodb:bson</include>
-                                    <include>commons-cli:*</include>
-                                    <include>me.lemire.integercompression:*</include>
-                                </includes>
-                            </artifactSet>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -139,6 +121,12 @@
         <dependency>
             <groupId>org.gradoop</groupId>
             <artifactId>gradoop-flink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-hbase</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Flink -->
@@ -159,5 +147,6 @@
             <artifactId>log4j</artifactId>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 </project>
